--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -35,11 +35,11 @@ endif
 ARCH	:=	-march=armv5te -mtune=arm946e-s -mfloat-abi=soft -mtp=soft -marm -mthumb-interwork -masm-syntax-unified
 
 CFLAGS	:=	$(ARCH) -g -std=c17 -Og -gdwarf-4 -flto -mword-relocations \
-			-ffunction-sections -Wall -Wextra
+			-fno-fast-math -ffunction-sections -Wall -Wextra
 CFLAGS	+=	$(INCLUDE) $(DEFINES)
 
 CXXFLAGS	:=	$(ARCH) -g -std=c++17 -Og -gdwarf-4 -flto \
-				-mword-relocations -ffunction-sections -Wall -Wextra
+				-mword-relocations -fno-fast-math -ffunction-sections -Wall -Wextra
 CXXFLAGS	+=	$(INCLUDE) $(DEFINES)
 
 ASFLAGS	:=	$(ARCH) -g -gdwarf-4 -flto $(INCLUDE) $(DEFINES)
